--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     Our warm and attentive staff is committed to making your stay memorable, and we take great pride in 
     delivering service that exceeds your expectations.
     </p>
+    <p> <h5>Number of guests: {{checked_in}}</h5>
+        <h5>Reservations: {{reservations}}</h5>
     <hr>
      % include('templates/footer.tpl')
   </div>
